--- a/Calendar.css
+++ b/Calendar.css
@@ -1,17 +1,30 @@
 /* CSS */
 body {
-    margin-top: 40px;
-    text-align: center;
+	margin-top: 40px;
+	text-align: center;
 	font-size: 14px;
 	font-family: Helvetica neue;
 }
 
 .container {
-  color: red;
+	color: red;
 }
-
 
 #calendar {
 	width: 100%;
 	margin: 0 auto;
+}
+
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
